--- a/addons/hr_expense/views/hr_expense_views.xml
+++ b/addons/hr_expense/views/hr_expense_views.xml
@@ -882,7 +882,7 @@
                                     }"
                                     readonly="not is_editable"
                                     force_save="1">
-                                <tree>
+                                <tree editable="bottom">
                                     <field name="employee_id" column_invisible="True"/>
                                     <field name="state" column_invisible="True"/>
                                     <field name="nb_attachment" column_invisible="True"/>
@@ -903,18 +903,18 @@
                                            optional="show"
                                            options="{'product_field': 'product_id', 'account_field': 'account_id', 'business_domain': 'expense'}"/>
                                     <field name="account_id" optional="hide" groups="account.group_account_readonly"/>
-                                    <field name="price_unit" optional="hide" widget="monetary" options="{'currency_field': 'company_currency_id', 'field_digits': True}"/>
+                                    <field name="price_unit" optional="hide" widget="monetary" options="{'currency_field': 'company_currency_id', 'field_digits': True}" readonly="True"/>
                                     <field name="currency_id" optional="hide" readonly="True" groups="base.group_multi_currency"/>
-                                    <field name="quantity" optional="hide" readonly="not product_has_cost"/>
+                                    <field name="quantity" optional="hide" readonly="True"/>
                                     <field name="tax_ids" string="Taxes" optional="show" widget="many2many_tags"
-                                           context="{'default_company_id': company_id}"/>
+                                           context="{'default_company_id': company_id}" readonly="True"/>
                                     <field name="tax_amount_currency" optional="hide"  options="{'currency_field': 'currency_id'}"
                                            context="{'default_company_id': company_id}" readonly="True" groups="base.group_multi_currency"/>
                                     <field name="tax_amount" optional="hide" readonly="True"/>
                                     <field name="total_amount_currency" options="{'currency_field': 'currency_id'}"
                                            string="Subtotal In Currency " optional="show"
-                                           readonly="not is_multiple_currency" groups="base.group_multi_currency"/>
-                                    <field name="total_amount" string="Subtotal" readonly="product_has_cost"/>
+                                           readonly="true" groups="base.group_multi_currency"/>
+                                    <field name="total_amount" string="Subtotal" readonly="True"/>
                                 </tree>
                             </field>
                             <group class="oe_subtotal_footer" colspan="2" name="expense_total">
