[FIX] website_event, website_event_*: fix layout
This commits address several minor layout issues across website_event
and website_event_* modules.

task-3698364

--- a/addons/website_event/views/event_templates_list.xml
+++ b/addons/website_event/views/event_templates_list.xml
@@ -47,7 +47,7 @@
 
 <!-- Index Topbar -->
 <template id="index_topbar" name="Topbar">
-        <div class="container my-3">
+        <div class="container mt-3 mb-4">
             <div class="o_wevent_index_topbar_filters d-flex d-print-none align-items-center justify-content-end flex-wrap gap-2 w-100">
                 <h2 class="my-0 me-auto pe-sm-4">Events</h2>
                     <t t-foreach="categories" t-as="category">
@@ -388,7 +388,7 @@
 
 <!-- Index - Sidebar -->
 <template id="index_sidebar" name="Sidebar">
-    <div id="o_wevent_index_sidebar" class="col-lg-4 ms-lg-3 ms-xl-5 my-5"/>
+    <div id="o_wevent_index_sidebar" class="col-lg-4 ms-lg-3 ps-xxl-5 mb-5"/>
 </template>
 
 <!-- Index - Sidebar - About us -->
