--- a/addons/website_event_meet/views/event_meet_templates_list.xml
+++ b/addons/website_event_meet/views/event_meet_templates_list.xml
@@ -9,7 +9,7 @@
             <div id="oe_structure_website_event_location_1" class="oe_structure"/>
             <!-- Content -->
             <div class="o_wemeet_container container h-100">
-                <div class="row h-100 mb-5 mx-0">
+                <div class="row h-100 mb-5">
                     <t t-call="website_event_meet.community_main"/>
                     <t t-call="website_event_meet.community_aside"/>
                 </div>
@@ -26,9 +26,9 @@
 
 <!-- Meeting Rooms Main Display -->
 <template id="community_main" name="Meeting Rooms: Main Display">
-    <div class="col-12 col-lg-8 col-xl-9 ps-0">
+    <div t-attf-class="col-12 {{meeting_rooms and' col-lg-8 col-xl-9 pe-xxl-5'}}">
         <t t-call="website_event.navbar"/>
-        <div class="d-flex flex-row align-items-center justify-content-between mb-2">
+        <div class="d-flex flex-row flex-wrap gap-2 pt-3 justify-content-between mb-2">
             <h3 class="mb-0">Join a room</h3>
             <div class="dropdown">
                 <a class="dropdown-toggle btn btn-light" title="Languages Menu"
@@ -168,7 +168,7 @@
 <template id="community_aside" name="Community: Aside">
     <div class="d-lg-flex justify-content-end col-lg-4 col-xl-3 mb-3 mb-lg-0">
         <div class="o_wevent_community_aside mt-3">
-            <div class="d-none d-md-block mb-3" t-if="event.meeting_room_allow_creation">
+            <div class="d-none d-md-block mb-4" t-if="event.meeting_room_allow_creation">
                 <h4 class="o_page_header">Start a topic</h4>
                 <p>Want to create your own discussion room?</p>
                 <a href="#" role="button"
