--- a/addons/website_event_track/views/event_track_templates_proposal.xml
+++ b/addons/website_event_track/views/event_track_templates_proposal.xml
@@ -7,7 +7,7 @@
         <div class="oe_structure" id="oe_structure_website_event_track_proposal_1"/>
         <div class="container">
             <section class="row mb-3">
-                <div class="col-lg-8 col-xl-9">
+                <div class="col-lg-8 col-xl-9 pe-xxl-5">
                     <t t-call="website_event.navbar"/>
                     <section>
                         <h3>Call for Proposals</h3>
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                                 <t t-call="website_event_track.event_track_proposal_contact_details"/>
-                                <div class="o_form_buttons d-flex justify-content-end">
+                                <div class="o_form_buttons d-flex justify-content-end pb-5">
                                     <button type="submit" class="btn btn-primary o_wetrack_proposal_submit_button">Submit Proposal</button>
                                     <span class="o_wetrack_proposal_error_section text-danger d-none ml8">
                                         <i class="fa fa-close mr4" role="img" aria-label="Error" title="Error"/>
