[FIX] web: clipped dropdown on firefox in list views
On firefox and safari applying a position-sticky on an element inside
an other element with an overflow is causing a rendering issue.

This was occuring with the dropdown `.o_optional_columns_dropdown`
making it unusable as soon as the `overflow-x` triggered the horizontal
scroll in the table.

Since the thead is in a position-sticky from >=16.1 we can't rely on the
positioning to move the dropdown. The component itself is moved above
the `<thead>` in the DOM and then use its positioning to refer to the
`o_field_x2many.o_field_x2many_list` avoiding the overflow that was 
breaking the rendering.

Note: The scrollbar ends up behind the `<thead>` with this change.

task-3696473

X-original-commit: 01cd6d4d0cfa418f5a72a90742d10ee44af523a4

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -271,9 +271,23 @@
             cursor: col-resize;
         }
 
-        .o_list_actions_header {
+        .o_list_actions_header, .o_optional_columns_dropdown {
             width: 32px;
             background-color: var(--ListRenderer-thead-bg-color);
+        }
+
+        .o_optional_columns_dropdown {
+            z-index: 2;
+            padding: var(--ListRenderer-thead-padding-v) var(--ListRenderer-table-padding-h) calc(var(--ListRenderer-thead-padding-v) + #{$form-check-margin-bottom}) $table-cell-padding-x-sm;
+
+            // Reset the styling applied by table > x
+            .dropdown-item {
+                padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+            }
+
+            .dropdown-divider {
+                padding: 0;
+            }
         }
 
         .o_data_row.o_list_no_open {
