--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -935,6 +935,10 @@
             padding: 3px;
             color: $o-main-text-color;
         }
+
+        .o_optional_columns_dropdown {
+            padding: $table-cell-padding-y-sm $o-horizontal-padding $table-cell-padding-x-sm $table-cell-padding-y-sm;
+        }
     }
     .o_form_readonly .o_field_widget .o_list_renderer .o_row_handle {
         display: none;  // Hide the handler in non-edit mode
@@ -966,6 +970,12 @@
             max-width: 300px;
         }
     }
+
+    // Required to position the .o_optional_columns_dropdown
+    .o_field_x2many_list {
+        position: relative;
+    }
+
     @include media-breakpoint-down(md) {
         .o_cp_buttons {
             width: 100%;
