[IMP] base: improve the design of the confirm identity modal view
PURPOSE
- Improve the design of the 'confirm your identity' modal.

SPECIFICATIONS
- Remove the primary colour from the background of the modal.
- Modal max width is set to medium.

Task-3349291

--- a/odoo/addons/base/views/res_users_identitycheck_views.xml
+++ b/odoo/addons/base/views/res_users_identitycheck_views.xml
@@ -5,8 +5,8 @@
         <record id="res_users_identitycheck_view_form" model="ir.ui.view">
             <field name="model">res.users.identitycheck</field>
             <field name="arch" type="xml">
-                <form string="Password Confirmation">
-                    <sheet class="bg-primary">
+                <form string="Password Confirmation" class="form_users_identitycheck">
+                    <sheet>
                         <h3><strong>Please enter your password to confirm you own this account</strong></h3>
                         <div>
                             <field class="o_field_highlight col-10 col-md-6 px-0" name="password" autocomplete="current-password"
