[FIX] website_event_track: enable clicking/tapping the entire track
Previously, to expand a collapsed track, users needed to click the icon.
This commit introduces a CSS workaround that allows clicking or tapping
on the entire track header instead.

Note: This workaround is temporary and "stable friendly." A more
permanent solution utilizing default Bootstrap classes should be
implemented in the master instead.

task-3698364

--- a/addons/website_event_track/views/event_track_templates_list.xml
+++ b/addons/website_event_track/views/event_track_templates_list.xml
@@ -253,7 +253,7 @@
                         <span class="h4 m-0"
                             t-out="tracks_header_name"/>
                     </div>
-                    <a t-attf-class="my-auto align-self-start text-black {{ 'collapsed' if tracks_info['default_collapsed'] else '' }}"
+                    <a t-attf-class="my-auto align-self-start stretched-link text-black {{ 'collapsed' if tracks_info['default_collapsed'] else '' }}"
                         t-attf-href="#collapse_session_list_{{ tracks_info_index }}"
                         t-attf-aria-controls="collapse_session_list_{{ tracks_info_index }}"
                         t-att-aria-expanded="'false' if tracks_info['default_collapsed'] else 'true'"
