--- a/addons/website_event_track/static/src/scss/event_track_templates.scss
+++ b/addons/website_event_track/static/src/scss/event_track_templates.scss
@@ -155,7 +155,7 @@
  */
 .o_wevent_event {
     .o_we_track_day_header {
-        a.collapsed {
+        a.collapsed .oi {
             transform: rotate(-90deg);
         }
     }
