--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1655,6 +1655,11 @@ input[value*="data-oe-translation-initial-sha"] {
     }
 }
 
+// Notification
+.o_notification_manager .o_notification {
+    --Notification__background-color: #{$body-bg};
+}
+
 //------------------------------------------------------------------------------
 // Website Animate
 //------------------------------------------------------------------------------
