--- a/addons/website_event/static/src/scss/event_templates_list.scss
+++ b/addons/website_event/static/src/scss/event_templates_list.scss
@@ -1,11 +1,11 @@
 .o_wevent_sidebar_social > .o_wevent_social_link {
-    $o_link_size: 3em;
+    $o_link_size: 2.3em;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     width: $o_link_size;
     height: $o_link_size;
-    margin: 0 ($spacer * .25) ($spacer * .5) ($spacer * .25);
+    margin: 0 0 ($spacer * .5) ($spacer * .25);
     line-height: $o_link_size;
     background-color: map-get($grays, '100');
     border: $border-width solid $border-color;
@@ -13,6 +13,7 @@
     text-align: center;
     &:hover, &:focus {
         background-color: map-get($grays, '300');
+        text-decoration: none;
     }
 }
 
