[FIX] website_event_track: increase `textarea` fields min. height
task-3698364

--- a/addons/website_event_track/views/event_track_templates_proposal.xml
+++ b/addons/website_event_track/views/event_track_templates_proposal.xml
@@ -59,7 +59,7 @@
                                             <span>*</span>
                                         </label>
                                         <div class="col-sm">
-                                            <textarea name="description" class="form-control" required="True"/>
+                                            <textarea name="description" class="form-control" rows="4" required="True"/>
                                         </div>
                                     </div>
                                     <div class="row mb-3">
@@ -97,7 +97,7 @@
                                     </div>
                                     <div class="row mb-3">
                                         <label class="col-form-label col-sm-auto" for="partner_biography" style="width: 200px" >Biography</label>
-                                        <div class="col-sm"><textarea name="partner_biography" class="form-control"/></div>
+                                        <div class="col-sm"><textarea name="partner_biography" rows="4" class="form-control"/></div>
                                     </div>
                                 </div>
                                 <t t-call="website_event_track.event_track_proposal_contact_details"/>
