--- a/addons/website_event_booth/views/event_booth_registration_templates.xml
+++ b/addons/website_event_booth/views/event_booth_registration_templates.xml
@@ -9,7 +9,7 @@
             <form method="post"
                 id="o_wbooth_contact_details_form"
                 t-att-data-event-id="event.id"
-                class="col-12 js_website_submit_form">
+                class="col-12 col-lg-9 js_website_submit_form">
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
                 <input type="hidden" name="booth_category_id" t-att-value="booth_category.id"/>
                 <input type="hidden" name="event_booth_ids" t-att-value="event_booths.ids"/>
