[FIX] website_mass_mailing: fix missing class of form-check-input
Before this commit:

When user insert newsletter block and change template to form subscription then
the aligment of 'i accept' box is littelbit odd because of missing class
`form-check-input`.

After this commit:

Now after addition of `form-check-input` class alignment of 'i accept' box is
correct.

task-3663332

--- a/addons/website_mass_mailing/views/snippets_templates.xml
+++ b/addons/website_mass_mailing/views/snippets_templates.xml
@@ -112,7 +112,7 @@ database, without the s_newsletter_list class. See fixNewsletterListClass.
                             </label>
                             <div class="col-sm">
                                 <div class="form-check">
-                                    <input type="checkbox" value="Yes" class="s_website_form_input" name="I want to be kept updated"
+                                    <input type="checkbox" value="Yes" class="s_website_form_input form-check-input" name="I want to be kept updated"
                                            id="mailing_sub3" required="1"/>
                                 </div>
                                 <div class="s_website_form_field_description small form-text text-muted">
