[FIX] website_event_track: fix offcanva's wrong html
Prior to this commit, the position of the `<li>` was not correct.
We had single `<li>` with multiples `<a>` inside, instead of multiples
`<li>` with a single `<a>`.

See relative commit[1] in another PR [2].

[1] https://github.com/odoo/odoo/commit/2d348d58cfa227fa84dc1581d80e81ec58e4cd23
[2] https://github.com/odoo/odoo/pull/145064

task-3698364

--- a/addons/website_event_track/views/event_track_templates_list.xml
+++ b/addons/website_event_track/views/event_track_templates_list.xml
@@ -111,7 +111,7 @@
                     <t t-foreach="tag_categories" t-as="tag_category">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
-                            <button class="accordion-button border-top collapsed"
+                            <button class="accordion-button collapsed"
                                 type="button"
                                 data-bs-toggle="collapse"
                                 t-att-data-bs-target="'.o_wevent_offcanvas_tag_%s' % tag_category.name"
@@ -122,18 +122,18 @@
                         <div t-attf-class="o_wevent_offcanvas_tag_#{tag_category.name} accordion-collapse collapse">
                             <div class="accordion-body pt-0">
                                 <ul class="list-group list-group-flush">
-                                        <li t-if="tag_category.tag_ids and any(tag.color for tag in tag_category.tag_ids)" class="list-group-item">
-                                            <t t-foreach="tag_category.tag_ids" t-as="tag">
+                                    <t t-if="tag_category.tag_ids and any(tag.color for tag in tag_category.tag_ids)" t-foreach="tag_category.tag_ids" t-as="tag">
+                                        <li class="list-group-item border-0 px-0">
                                                 <a t-att-href="'/event/%s/track?%s' % (
                                                         slug(event),
                                                         keep_query('*', tags=str((search_tags - tag).ids if tag in search_tags else (tag | search_tags).ids))
                                                     )"
                                                     t-if="tag.color"
-                                                    t-attf-class="d-flex align-items-center justify-content-between #{'active' if tag in search_tags else ''}">
+                                                    t-attf-class="d-flex align-items-center justify-content-between text-reset #{'active' if tag in search_tags else ''}">
                                                     <t t-out="tag.name"/>
                                                 </a>
-                                            </t>
                                         </li>
+                                    </t>
                                 </ul>
                             </div>
                         </div>
